fe-devkonnect-evn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-konnect-fe
  namespace: dev-konnect
  labels:
    app: dev-connect-fe
spec:
  containers:
    - name: devkonnect-fe
      image: freeman82/dev-konnect:fe-devkonnect
      imagePullPolicy: Always
      ports:
        - containerPort: 3000
  imagePullSecrets:
    - name: dockerhub-creds
